--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     sessionStorage.redirect = location.href;
   </script>
 
-  <meta http-equiv="refresh" content="0;URL='/ember-fountainhead'"></meta>
+  <meta http-equiv="refresh" content="0;URL='/ember-radical'"></meta>
 </head>
 
 <body>
